# pg-amqp-bridge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: main.rs
