[package]
name = "pg-amqp-bridge"
version = "0.0.6"
authors = ["steve-chavez <stevechavezast@gmail.com>"]

[[test]]
name = "main"
harness = false

[dependencies]
url = "2.1.0"
amqp = "0.1.0"
env_logger = "0.4.2"
fallible-iterator = "0.1.3"
log = "0.3.7"
openssl = "0.10"
postgres = { version = "0.15", features = ["with-openssl"] }
r2d2 = "0.8.7"
r2d2_postgres = "0.14.0"

[dev-dependencies]
rustc-test = "0.2.0"
futures = "0.1.12"
lapin-futures = "0.9.0"
tokio-core = "0.1.6"
